figue/tests/integration/snapshots/main__integration__ariadne__ariadne_expected_value_got_eof.snap
---
source: crates/figue/tests/integration/ariadne.rs
expression: ariadne_output
---
Error: could not parse command-line arguments

Sources:
├─ cli --settings.*
└─ defaults

concurrency.. .. ⨯ MISSING

Run with --help for usage information.
Error: flag --concurrency requires a value
   ╭─[ <cli>:1:1 ]
   │
 1 │ --concurrency
   │ ──────┬──────  
   │       ╰──────── flag --concurrency requires a value
───╯
