figue/tests/integration/snapshots/main__integration__ariadne__ariadne_invalid_value.snap
---
source: crates/figue/tests/integration/ariadne.rs
expression: ariadne_output
---
Error: failed to parse "not-a-number" as usize at count
   ╭─[ <cli>:1:9 ]
   │
 1 │ --count not-a-number
   │         ──────┬─────  
   │               ╰─────── failed to parse "not-a-number" as usize at count
───╯
