figue/tests/integration/snapshots/main__integration__ariadne__ariadne_unexpected_positional.snap
---
source: crates/figue/tests/integration/ariadne.rs
expression: ariadne_output
---
Error: could not parse command-line arguments

Sources:
├─ cli --settings.*
└─ defaults

name.. value.. --name

Run with --help for usage information.
Error: unexpected argument: unexpected
   ╭─[ <cli>:1:1 ]
   │
 1 │ unexpected --name value
   │ ─────┬────  
   │      ╰────── unexpected argument: unexpected
───╯
